# AI_FOR_VOICE_DETECTION

./: README.md  pyproject.toml  requirements.txt  test_model.py
app/: auth.py  detector.py  main.py  schemas.py
app/model/: final_model.keras
voice-detection-frontend/: .env.example  index.html  package-lock.json  package.json
voice-detection-frontend/src/: App.jsx
voice-detection-frontend/src/components/: VoiceDetection.jsx
