[project]
name = "ai-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "keras>=3.13.2",
    "librosa>=0.11.0",
    "pydantic>=2.12.5",
    "tensorflow>=2.20.0",
    "uvicorn>=0.40.0",
]
